Add support for slotted attributes
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>